@@ -30,7 +30,6 @@
 package org.hisp.dhis.analytics.table;
 
 import static java.lang.String.join;
-import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toSet;
 import static org.apache.commons.lang3.StringUtils.EMPTY;
 import static org.hisp.dhis.analytics.table.model.Skip.SKIP;
@@ -168,10 +167,10 @@ public class JdbcEventAnalyticsTableManager extends AbstractEventJdbcTableManage
 
     List<Program> programs =
         params.isSkipPrograms()
-            ? idObjectManager.getAllNoAcl(Program.class)
-            : idObjectManager.getAllNoAcl(Program.class).stream()
+            ? idObjectManager.getAllNoAcl(Program.class).stream()
                 .filter(p -> !params.getSkipPrograms().contains(p.getUid()))
-                .collect(toList());
+                .toList()
+            : idObjectManager.getAllNoAcl(Program.class);
 
     Integer firstDataYear = availableDataYears.get(0);
     Integer latestDataYear = availableDataYears.get(availableDataYears.size() - 1);
@@ -231,7 +230,7 @@ public class JdbcEventAnalyticsTableManager extends AbstractEventJdbcTableManage
         params.isSkipPrograms()
             ? idObjectManager.getAllNoAcl(Program.class).stream()
                 .filter(p -> !params.getSkipPrograms().contains(p.getUid()))
-                .collect(toList())
+                .toList()
             : idObjectManager.getAllNoAcl(Program.class);
 
     for (Program program : programs) {
@@ -306,12 +305,12 @@ public class JdbcEventAnalyticsTableManager extends AbstractEventJdbcTableManage
               and ev.lastupdated >= '${startDate}' \
               and ev.lastupdated < '${endDate}');""",
               Map.of(
-                  "tableName", qualify(table.getName()),
+                  "tableName", qualify(table.getMainName()),
                   "programId", String.valueOf(table.getProgram().getId()),
                   "startDate", toLongDate(partition.getStartDate()),
                   "endDate", toLongDate(partition.getEndDate())));
 
-      invokeTimeAndLog(sql, "Remove updated events for table: '{}'", table.getName());
+      invokeTimeAndLog(sql, "Remove updated events for table: '{}'", table.getMainName());
     }
   }
 
